[tool.poetry]
name = "ff3-cli"
version = "0.1.0"
description = ""
authors = ["Alexandre-Silva <nowhere@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.9.2"
click = "^8.1.7"
toml = "^0.10.2"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
